--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -9,7 +9,7 @@
     font-style: normal;
 
 }
-body {background: black; width:792px!important;height:1600px!important;overflow:hidden!important;}
+body {background: black; width:792px!important;height:1600px!important;}
 #capa-site{min-height: 522px;*margin-top: -50px !important}
 #rodape-portal {margin-top: -28px;*z-index:1000;*margin-top:23px !important;}
 .voltar-topo{*margin-left:-350px !important;}
