--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -13,7 +13,8 @@ body {background: black; width:792px!important;height:1600px!important;}
 #capa-site{min-height: 522px;*margin-top: -50px !important}
 #rodape-portal {margin-top: -28px;*z-index:1000;*margin-top:23px !important;}
 .voltar-topo{*margin-left:-350px !important;}
-#capa-site{position:relative;overflow: visible; min-height:833px;}
+#capa-site{ position:relative ; max-width: 780px; min-height:530px; height:1600px; overflow:scroll;}
+/*#capa-site{position:relative;overflow: visible; min-height:833px;}*/
 #capa-site .logo{position: absolute;top: 70px;left:0px;}
 #capa-site .logo{*position: absolute;*top: 62px; *left:0px;}
 #capa-site .redes {position: relative;bottom: 40px;left: 97px;}
