--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -29,7 +29,7 @@ body {background: black;}
 label.error{position: absolute;bottom: -10px;color: red;}
 #capa-site label { display:block; float: left; margin-right:20px; }
 #capa-site label input { width:100%; margin-top:2px;  }
-#form-contato { float:left; margin-bottom:50px; width: 770px;margin-left: 10px; }
+#form-contato { float:left; margin-bottom:50px; width: 700px;margin: 10px auto; }
 /*#enviar {clear: both;    float: right;    margin: 2%; }*/
 #enviar{float: right;margin: 0 auto;font-size: 20px;line-height: 26px;color: #FFFFFF;font-family: 'source_sans_proregular', Arial, Helvetica, sans-serif;text-align: center;margin-bottom: 20px;}
 #enviar:hover{text-decoration:none;}
