--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -77,4 +77,4 @@ h1,
 
 #barra-site .redes .curtir { width: auto; }
 #barra-site .redes {  margin:40px 70px 0 0; float:right;  }
-#barra-site .redes
+.uma-coluna .titulos, .uma-coluna p, .novoNoAr .noAr-box .chapeu { color:#333; }
