--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -85,3 +85,4 @@ h1,
 .box-topo .navegacao { margin-bottom:0; }
 #box-videos .conteudo-lista h3,
 #box-videos .conteudo-lista a { color:#fff !important; }
+.btn-compartilhar p { width:auto;  }
