--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -86,5 +86,5 @@ h1,
 #box-videos .conteudo-lista h3,
 #box-videos .conteudo-lista a { color:#fff !important; }
 .btn-compartilhar p { width:auto;  }
-p#enviar { margin-bottom:0; }
+p#enviar { margin:0; }
 
