--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -14,6 +14,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'source_sans_probold';
+    src: url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.eot');
+    src: url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.woff') format('woff'),
+         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.ttf') format('truetype'),
+         url('/portal/css/fontes/sourcesans/sourcesanspro-bold-webfont.svg#source_sans_probold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container { max-width: 970px; }
 .nav-tabs > li > a,
 .hero-unit .fechar,
