--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -89,5 +89,5 @@ h1,
 p#enviar { margin:0; }
 #msgSuccess { float:left; margin-bottom:20px; }
 #msgSuccess p { margin-bottom:0; }
-#msgSuccess .bg { background:#66ff33; display:inline; }
+#msgSuccess .bg { background:#ff6633; display:inline; }
 
