--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -90,4 +90,5 @@ p#enviar { margin:0; }
 #msgSuccess { float:left; margin-bottom:20px; }
 #msgSuccess p { margin-bottom:0; }
 #msgSuccess .bg { background:#ff6633; padding:5px; width:628px; float:left; margin-top:10px; }
+.contato form .txt-10 { font-size:10px; color:#fff; text-transform:uppercase; }
 
