--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -96,5 +96,6 @@ p#enviar { margin:0; }
 /* IE*/
 #conteudo-pagina { *background:#67170a; }
 #menuFloat { *display:none; }
+#barra-site .topo-programa { *margin-left:32px; }
 /* IE*/
 
