--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -92,7 +92,7 @@ p#enviar { margin:0; }
 #msgSuccess .bg { background:#ff6633; padding:5px; width:628px; float:left; margin-top:10px; }
 .contato form .txt-10 span,
 .contato form .txt-10 { font-size:10px !important; color:#fff !important; text-transform:uppercase; }
-#destaque p,
+
 .box-padrao p { width:100%; }
 
 /* IE*/
@@ -100,5 +100,6 @@ p#enviar { margin:0; }
 #menuFloat { *display:none; }
 #barra-site .topo-programa { *margin-left:32px; }
 .box-compartilhar { *margin-top:20px; }
+#destaque p  { width:100%; }
 /* IE*/
 
