--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -94,6 +94,7 @@ p#enviar { margin:0; }
 .contato form .txt-10 { font-size:10px !important; color:#fff !important; text-transform:uppercase; }
 
 .box-padrao p { width:100%; }
+#esquerda h4 { text-align:left; }
 
 /* IE*/
 #conteudo-pagina { *background:#67170a; }
