--- a/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
+++ b/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
@@ -59,7 +59,7 @@
 .section-login #manter_conectado{position: absolute;top: 0;}
 .section-login .txt_manterconectado{position: absolute;top: 0px;}
 .section-login label.checkbox .error{position:absolute;top:10px;}
-.section-login .error{font-size: 12px; color: red; margin-top: -5px; margin-bottom:5%;}
+.error{font-size: 12px; color: red; margin-top: -5px; margin-bottom:5%;}
 
 .section-body .colocacao{min-width: 60px;height: 65px;display: block;background: #eeeeee;float: left;font-family: 'source_sans_probold';color: #cc0000;text-align: center;line-height: 65px;padding: 0 10px;font-size: 3em;}
 .section-body .user{color:#fff; background:#b30003;}
