--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -84,6 +84,7 @@ h1,
 .novoNoAr .noAr-box .chapeu { color:#333 !important; }
 .box-topo .navegacao { margin-bottom:0; }
 #box-videos .conteudo-lista h3,
+.box-interna h3,
 #box-videos .conteudo-lista a { color:#fff !important; }
 .btn-compartilhar p { width:auto;  }
 p#enviar { margin:0; }
@@ -95,6 +96,7 @@ p#enviar { margin:0; }
 
 .box-padrao p { width:100%; }
 #esquerda h4 { text-align:left; }
+ 
 
 /* IE*/
 #conteudo-pagina { *background:#67170a; }
