--- a/web/portal/css/tvcultura/sites/qss-site.css
+++ b/web/portal/css/tvcultura/sites/qss-site.css
@@ -70,7 +70,8 @@ h1,
 
 #barra-site .topo-programa { background: url(/portal/images/capaPrograma/qss/bg-topo-qss.jpg) no-repeat; height:173px; width:990px; }
 #capa-site { margin-top: -102px !important; }
-body:nth-of-type(1) #capa-site{ margin-top:-99px !important;}
+@media screen and (-webkit-min-device-pixel-ratio:0) { #capa-site { margin-top:-99px !important;}  }
+
 
 .box-topo {    margin:-45px 0 0 52px;}
 #barra-site h2 { margin:40px 0 0 20px }
