--- a/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
+++ b/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
@@ -2,6 +2,7 @@
 /* quem sabe sabe */
 .offline{color:red!important;}
 .online{color:#006600!important;}
+.disabled{background:#ccc;}
 .hero-unit {background:url(/portal/images/capaPrograma/segundatela/quemsabesabe/bg_topo_qss.jpg) no-repeat; text-align:left;}
 .hero-unit .bgtopo { width: 240px; height:200px; background:url(/portal/images/capaPrograma/segundatela/quemsabesabe/apresentadores_qss.png) no-repeat; float:left; margin-right:10px; }
 .hero-unit .col-esq {margin-left: 2%;max-width: 38%;}
