--- a/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
+++ b/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
@@ -84,7 +84,7 @@
 .section-body .accordion-inner{background:none!important;}
 .accordion-inner ul {padding: 0px 18px}
 .accordion-inner ul li{ height: 33px; background: #6c0205; list-style: none; margin-bottom: 5px;}
-.section-body .resposta{width: 90%;display: block;float: left;padding: 7px;color: white;text-decoration: none; cursor:hand;}
+.section-body .resposta{width: 90%;display: block;float: left;padding: 7px;color: white;text-decoration: none; cursor:hand!important;}
 .section-body .resposta p{overflow: hidden; text-overflow: ellipsis; margin:0;height:20px; }
 .section-body .correct{background:#2db91f!important;}
 /*.section-body .selected{background:#d48520;}*/
