--- a/web/portal/css/tvcultura/sites/guiadodia.css
+++ b/web/portal/css/tvcultura/sites/guiadodia.css
@@ -1,2 +1,3 @@
 .box-interna { margin-bottom:40px; }
 .paginacao .centraliza { float:right; margin:0; width:auto !important; }
+#esquerda hr { visibility:visible; margin-bottom:40px; }
