--- a/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
+++ b/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
@@ -2,7 +2,7 @@
 /* quem sabe sabe */
 .time{margin: 3% 0 10% 0;background: #5b2561;border-radius: 0;padding: 5px;text-shadow: none;font-family: arial;font-weight: lighter;}
 .seta{width: 20px;height: 20px;background: url(/portal/images/capaPrograma/segundatela/quemsabesabe/setinha.png) no-repeat top;display: block;position: absolute;right: 37px;top: 11px;}
-.seta-hide{background-position:bottom}
+.seta-hide{background-position:0px -20px;}
 .offline{color:red!important;}
 .online{color:#006600!important;}
 .disabled{background:#ccc!important;}
