--- a/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
+++ b/web/portal/css/tvcultura/sites/segundatela/quemsabesabe.css
@@ -86,7 +86,7 @@
 .section-body .accordion-body{ background:none!important;margin-bottom:20px;}
 .section-body .accordion-inner{background:none!important;}
 .accordion-inner ul {padding: 0px 18px}
-/*.accordion-inner ul li{ height: 33px; background: #6c0205; list-style: none; margin-bottom: 5px;}*/
+.accordion-inner ul li{ height: 33px; background: #6c0205; list-style: none; margin-bottom: 5px;}
 .section-body .resposta{width: 80%;display: block;float: left;padding: 7px;color: white;text-decoration: none; cursor:pointer;;}
 .section-body .resposta p{overflow: hidden; text-overflow: ellipsis; margin:0;height:20px; }
 .section-body .correct{background:#2db91f!important;}
@@ -131,7 +131,7 @@
 @media (min-width: 481px) and (max-width: 766px){
    #footer{display:none;} 
   .section-body .tab-content li{width:50%; float:left;}
-  .accordion-inner ul li{ height: 33px; background: #6c0205; list-style: none; margin-bottom: 5px; width:47%; float:left;margin-left:2%;}
+  
 }
 /* celular */
 @media (min-width: 321px) and (max-width: 480px) {
@@ -163,6 +163,7 @@
 
 @media (max-width: 320px) { 
  #footer{display:none;}
+ .accordion-inner ul li{width:90%;margin-left:0%;}
  .hero-unit{overflow:hidden;background-color:#4b135f;}
  .hero-unit .col-esq h1 {margin: 5% auto 2% ;}
  .hero-unit .col-esq {margin-left: 2%;max-width: 100%;}
