--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -118,6 +118,39 @@
 #twitter-widget-1 { min-height:600px; }
 .accordion-body p img {  max-width: 50% !important;  height: auto !important;  width: auto !important;}
 
+/**** datepicker ****/
+.box-padrao #datepicker .ui-widget { width:310px; }
+.box-padrao #datepicker .ui-datepicker-title { width:120px; float:left; margin:0 20px; text-align:center; }
+.box-padrao #datepicker .ui-datepicker-title span { font:bold 16px arial; color:#333; }
+.box-padrao #datepicker .ui-corner-all { float:left; }
+.box-padrao #datepicker .ui-datepicker-next { float:right; }
+.box-padrao #datepicker .ui-corner-all { -moz-border-radius:none; }
+.box-padrao #datepicker .ui-widget-content { background:none; border:none; }
+.box-padrao #datepicker .ui-widget-header { background:none; border:none; width:190px; margin-left:61px; }
+.box-padrao #datepicker .ui-widget-header .ui-icon { background:url(../../images/seta-calendario.png) no-repeat; height:12px; width:12px; }
+.box-padrao #datepicker .ui-datepicker-next .ui-icon { background-position:0 -12px; } 
+.box-padrao #datepicker table { width:310px; margin-top:15px; }
+.box-padrao #datepicker caption,
+.box-padrao #datepicker th {  text-align:center; width:44px; float:left; }
+.box-padrao #datepicker tr { width:310px; }
+.box-padrao #datepicker table thead { width:310px; }
+.box-padrao #datepicker table thead th span { font:bold 10px arial; color:#333; text-transform:uppercase; }
+.box-padrao #datepicker tbody { margin-top:10px; width:310px; float:left; }
+.box-padrao #datepicker .ui-state-default { background:transparent; width:42px; height:26px;  text-align:center; display:block; font:bold 12px arial; color:#333; border:none;  line-height:26px; margin:0 2px 2px 0; }  
+.box-padrao #datepicker .ui-widget-content .ui-state-active,
+.box-padrao #datepicker .ui-state-hover, 
+.box-padrao #datepicker .ui-widget-content .ui-state-hover, 
+.box-padrao #datepicker .ui-widget-header .ui-state-hover, 
+.box-padrao #datepicker .ui-state-focus, 
+.box-padrao #datepicker .ui-widget-content .ui-state-focus, 
+.box-padrao #datepicker .ui-widget-header .ui-state-focus { background:#ff6633; color:#fff; text-decoration:none; }
+.box-padrao #datepicker .ui-widget-content .ui-datepicker-next:hover,
+.box-padrao #datepicker .ui-widget-content .ui-datepicker-prev:hover { background:none;  border:none; }
+.box-padrao #datepicker tbody span { background:transparent; color:#333;}
+.box-padrao #datepicker tbody a { background:#fff; color:#333; text-decoration:none; }
+.box-padrao #datepicker tbody a:hover {background:#ff6633; color:#fff;}
+/**** /datepicker ****/
+
 /* clock */
 #box-clock{width:126px; height:40px; background: #cccccc; display: block; position:relative; top:10px; right:20px; float:right;}
 #box-clock #no-ar{width: 60px;background: #FFF;float: left;height: 30px;margin: 5px;}
@@ -249,3 +282,5 @@ and (orientation : portrait) {
 
 .hero-unit .menu-jc .como { margin:0; }
 .hero-unit .col-dir span.barra { font-size:21px; }
+
+
