--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -119,9 +119,9 @@
 .accordion-body p img {  max-width: 50% !important;  height: auto !important;  width: auto !important;}
 
 /**** datepicker ****/
-.box-padrao #mytab2{width: 100%; border: none;}
+.box-padrao #mytab2{width: 100%; border: none; margin:0 0 6px 0;}
 .box-padrao #datepicker .ui-widget { width:310px; }
-.box-padrao #datepicker .ui-datepicker-title { width:120px; float:left; margin:0 20px; text-align:center; }
+.box-padrao #datepicker .ui-datepicker-title { width:146px; float:left; margin:0 20px; text-align:center; }
 .box-padrao #datepicker .ui-datepicker-title span { font:bold 16px arial; color:#333; }
 .box-padrao #datepicker .ui-corner-all { float:left; }
 .box-padrao #datepicker .ui-datepicker-next { float:right; }
@@ -130,7 +130,7 @@
 .box-padrao #datepicker .ui-widget-header { background:none; border:none; width:190px; margin-left:61px; }
 .box-padrao #datepicker .ui-widget-header .ui-icon { background:url(/portal/images/seta-calendario.png) no-repeat; height:12px; width:12px; }
 .box-padrao #datepicker .ui-datepicker-next .ui-icon { background-position:0 -12px; } 
-.box-padrao #datepicker table { width:310px; margin-top:15px; }
+.box-padrao #datepicker table { width:310px; margin-top:0px; }
 .box-padrao #datepicker caption,
 .box-padrao #datepicker th {  text-align:center; width:35px; float:left; }
 .box-padrao #datepicker tr { width:310px; }
