--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -119,7 +119,7 @@
 .accordion-body p img {  max-width: 50% !important;  height: auto !important;  width: auto !important;}
 
 /**** datepicker ****/
-.box-padrao #mytab2 li{width: 100%; border: none; margin:0 0 6px 0;}
+.box-padrao #mytab2 li{width: 100%!important; border: none!important; margin:0 0 6px 0;}
 .box-padrao #datepicker .ui-widget { width:310px; }
 .box-padrao #datepicker .ui-datepicker-title { width:146px; float:left; margin:0 20px; text-align:center; }
 .box-padrao #datepicker .ui-datepicker-title span { font:bold 16px arial; color:#333; }
