--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -25,6 +25,7 @@
     font-style: normal;
 }
 
+.navegue{width: 100%; border: dashed 1px #FFF; margin:0 0 6px 0; text-align: left; padding: 0 0 0 11px;}
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container { max-width: 970px; }
 .nav-tabs > li > a,
 .hero-unit .fechar,
