--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -25,7 +25,6 @@
     font-style: normal;
 }
 
-.navegue{width: 100%; border: dashed 1px #FFF; margin:0 0 6px 0; text-align: left; padding: 0 0 0 11px;}
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container { max-width: 970px; }
 .nav-tabs > li > a,
 .hero-unit .fechar,
@@ -150,6 +149,9 @@
 .box-padrao #datepicker tbody span { background:transparent; color:#333;}
 .box-padrao #datepicker tbody a { background:#fff; color:#333; text-decoration:none; }
 .box-padrao #datepicker tbody a:hover {background:#333; color:#fff;}
+.box-padrao #datepicker td.select, table.ui-datepicker-calendar tbody td.select a { background: none!important;background-color: yellow!important; color: red!important;}
+.box-padrao #datepicker td.not-select, table.ui-datepicker-calendar tbody td.not-select a { background: none!important;background-color: blue!important; color: black!important;}
+.box-padrao #datepicker .navegue{width: 100%; border: dashed 1px #FFF; margin:0 0 6px 0; text-align: left; padding: 0 0 0 11px;}
 /**** /datepicker ****/
 
 /* clock */
