--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -151,7 +151,7 @@
 .box-padrao #datepicker tbody a:hover {background:#333; color:#fff;}
 .box-padrao #datepicker td.select, table.ui-datepicker-calendar tbody td.select a { background: none!important;background-color: yellow!important; color: red!important;}
 .box-padrao #datepicker td.not-select, table.ui-datepicker-calendar tbody td.not-select a { background: none!important;background-color: blue!important; color: black!important;}
-.box-padrao #datepicker .navegue{width: 100%; border: dashed 1px #FFF; margin:0 0 6px 0; text-align: left; padding: 0 0 0 11px;}
+.box-padrao #datepicker .navegue{width: 100%; border: dashed 1px #FFF; margin:0 0 6px 0; text-align: left!important; padding: 0 0 0 11px!important;}
 /**** /datepicker ****/
 
 /* clock */
